// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperEditionModal should match snapshot when has a subscription already 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="el-is-active el-modal-bg"
        />
        <div
          aria-describedby=":r6:"
          aria-modal="true"
          class="el-is-active el-modal"
          role="dialog"
        >
          <div
            class="mocked-styled-50 el-modal-header"
          >
            Existing Subscription
          </div>
          <div
            class="mocked-styled-51 el-modal-body"
            id=":r6:"
          >
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              It looks as though you already have a subscription in place for the Developer Edition of Agency Cloud. To download, please use the ‘Download Now’ button below. For more information or support using the Developer Edition, please 
              <a
                href=""
                rel="noopener noreferrer"
                target="_blank"
              >
                click here
              </a>
            </p>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Close
                </button>
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Download
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has billing content and is a user 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="el-is-active el-modal-bg"
        />
        <div
          aria-describedby=":ra:"
          aria-modal="true"
          class="el-is-active el-modal"
          role="dialog"
        >
          <div
            class="mocked-styled-50 el-modal-header"
          >
            Account Information Required
          </div>
          <div
            class="mocked-styled-51 el-modal-body"
            id=":ra:"
          >
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              <p>
                Before you can subscribe to the Developer Edition of Reapit CRM, billing information will need to be submitted. Please ask the Admin of your organisation to visit this page to contact a member of the team.
              </p>
            </p>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has billing content and is an admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="el-is-active el-modal-bg"
        />
        <div
          aria-describedby=":r8:"
          aria-modal="true"
          class="el-is-active el-modal"
          role="dialog"
        >
          <div
            class="mocked-styled-50 el-modal-header"
          >
            Account Information Required
          </div>
          <div
            class="mocked-styled-51 el-modal-body"
            id=":r8:"
          >
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              <p>
                Before you can subscribe to the Developer Edition of Reapit CRM, we will first need to verify your account information. Please
                <a
                  href="mailto:jhennessy@reapit.com?subject=Developer%20Edition%20of%20Reapit%20CRM%20Subscription"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                   
                  click here
                </a>
                 
                to contact a member of the team.
              </p>
            </p>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has client data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="el-is-active el-modal-bg"
        />
        <div
          aria-describedby=":rc:"
          aria-modal="true"
          class="el-is-active el-modal"
          role="dialog"
        >
          <div
            class="mocked-styled-50 el-modal-header"
          >
            Unable to create subscription
          </div>
          <div
            class="mocked-styled-51 el-modal-body"
            id=":rc:"
          >
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Your account is currently set to use 
              <strong>
                MOCK_COMPANY
              </strong>
              . In order to subscribe to the developer edition you will need to change your profile setting. Please
               
              <a
                href="/settings/profile"
              >
                click here
              </a>
               to update your information.
            </p>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when has subscribed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="el-is-active el-modal-bg"
        />
        <div
          aria-describedby=":r4:"
          aria-modal="true"
          class="el-is-active el-modal"
          role="dialog"
        >
          <div
            class="mocked-styled-50 el-modal-header"
          >
            Success
          </div>
          <div
            class="mocked-styled-51 el-modal-body"
            id=":r4:"
          >
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              You have successfully subscribed 1 Agency Cloud user licence and an email has been sent to the following members of your organisation with instructions on how to get started.
            </p>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Joe Dev
               - 
              <a
                href="mailto:example@email.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                example@email.com
              </a>
            </p>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              We have added your subscription to your monthly billing. To manage your subscriptions please visit the 'Billing' tab.
            </p>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Close
                </button>
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Download
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when not visible 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperEditionModal should match snapshot when visible 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div>
        <div
          class="el-is-active el-modal-bg"
        />
        <div
          aria-describedby=":r1:"
          aria-modal="true"
          class="el-is-active el-modal"
          role="dialog"
        >
          <div
            class="mocked-styled-50 el-modal-header"
          >
            Agency Cloud Developer Edition
          </div>
          <div
            class="mocked-styled-51 el-modal-body"
            id=":r1:"
          >
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              The Agency Cloud Developer Edition is a licensed product. 
              By confirming the subscription below, a subscription of £300 will automatically be added to your monthly billing.
               For more information regarding the Developer Edition licence please refer to your Developer Registration
               
              <a
                href="/api-docs/developer-terms-and-conditions"
                rel="noreferrer"
                target="_blank"
              >
                Terms and Conditions.
              </a>
            </p>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              To proceed, please confirm your subscription below for 
              <strong>
                Joe Dev
              </strong>
            </p>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Cancel
                </button>
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Confirm
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
